--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300italic' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="jquery.min.js"></script>
 </head>
 <body>
 <nav class="navbar-inverse">
+<p style="font-size: 2.3em; font-family: 'impact'; color: #DC5555; margin-left: 20px; padding-top: 10px;">Gethub</p>
 </nav>
 <div class="container" ng-app="App">
   <div ng-controller="Controller">
     <div class="form-group">
-      <label for="">Insert Github Username</label>
+      <label for=""><h1><strong>Insert</strong> Github Username</h1></label>
       <input type="text" class="form-control" ng-model="username"></input>
     </div>
     <ul>
@@ -23,6 +25,8 @@
     </ul>
   </div>
 </div>
+
+
 <script src="node_modules/angular/angular.js"></script>
 <script src="controller.js"></script>
 <script type="app.js"></script>
