--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="App">
 
 <head>
     <meta charset="UTF-8">
@@ -7,35 +7,37 @@
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300italic' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="jquery.min.js"></script>
+    <style>
+    #fun {
+      color: yellow;
+    }
+    </style>
 </head>
 
-<body ng-app="App">
+<body>
     <nav class="navbar-inverse">
         <p style="font-size: 2.3em; font-family: 'impact'; color: #DC5555; margin-left: 20px; padding-top: 10px;">Gethub</p>
     </nav>
-    <div class="container" ng-app="App">
-        <div ng-controller="Controller">
+    <div class="container">
+        <div ng-controller="Controller as ctrl">
             <div class="form-group">
                 <label for="">
                     <h1><strong>Insert</strong> Github Username</h1></label>
-                <form ng-submit="getUser()">
-                    <input type="text" class="form-control" ng-model="user" value="Search"></input>
+                <form ng-submit="ctrl.getUser()">
+                    <input type="text" class="form-control" ng-model="ctrl.user" value="Search"></input>
                 </form>
             </div>
-            <ul>
-                <li ng-repeat="data in res">
-                    <p>Name: {{data.name}}</p>
-                    <p>Company: {{data.company}}</p>
-                    <p>Public repos: {{data.public_repos}} </p>
-                </li>
+            <ul id="fun" ng-repeat="item in ctrl.results">
+                    <li>{{item.name}}</li>
+                    <li>{{item.company}}</li>
+                    <li>{{item.public_repos}}</li>
             </ul>
         </div>
     </div>
 
-
     <script src="/node_modules/angular/angular.js"></script>
     <script src="/controller.js"></script>
+
 </body>
 
 </html>
