--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- <nav class="navbar-inverse"> -->
-<p class="navType animated slideInDown">.Gethub<img src="GetHUB.png"></p>
+<p class="navType animated slideInDown">.Gethub<img src="public/img/GetHUB.png"></p>
 <div class="bar">
 <h1 class="advert animated zoomInRight" style='margin-left: 40px;'>This Application is a simple <strong>API</strong></h1>
 <!-- </nav> -->
