--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>.GetHub</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js">
-  <link rel="stylesheet" type="text/css" href="/public/stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300italic' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- <nav class="navbar-inverse"> -->
-<p class="navType animated slideInDown">.Gethub<img src="/public/img/GetHUB.png"></p>
+<p class="navType animated slideInDown">.Gethub<img src="public/img/GetHUB.png"></p>
 <div class="bar">
 <h1 class="advert animated zoomInRight" style='margin-left: 40px;'>This Application is a simple <strong>API</strong></h1>
 <!-- </nav> -->
