saving for deploy

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <title>.GetHub</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js">
-  <link rel="stylesheet" type="text/css" href="https://gethub1.herokuapp.com/public/stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
 
@@ -14,7 +15,7 @@
 </head>
 <body>
 <!-- <nav class="navbar-inverse"> -->
-<p class="navType animated slideInDown">.Gethub<img src="/public/img/GetHUB.png"></p>
+<p class="navType animated slideInDown">.Gethub<img src="public/img/GetHUB.png"></p>
 <div class="bar">
 <h1 class="advert animated zoomInRight" style='margin-left: 40px;'>This Application is a simple <strong>API</strong></h1>
 <!-- </nav> -->
@@ -36,6 +37,7 @@
 
 
 <!-- <script src="node_modules/angular/angular.js"></script> -->
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="controller.js"></script>
 <script type="app.js"></script>
 </body>
